Major update to make it work on 2024: - Replacement of rxtx with jSerialComm - Use Java 17 - Upgrade a bunch of libs - macOS bundle upgrade: jarbundler: 2.1.0 -> 3.3.0 (works on Sonoma 14.3 on Mac Silicon) - Replace jvt220 jar with pom reference - Some changes on logging - Runner: start framework after bootstrap to avoid weird issues on plugin changes - README.md: reduce amount of information. added screenshots