@@ -6,18 +6,11 @@
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<name>OLS Reactor POM</name>
-	<organization>
-		<name>L'Xtreme IT consultancy</name>
-		<url>http://ols.lxtreme.nl/</url>
-	</organization>
 	<developers>
-		<developer>
-			<id>jawi</id>
-			<name>Jan Willem</name>
-			<email>j.w.janssen@lxtreme.nl</email>
-			<organization>L'Xtreme IT consultancy</organization>
-			<url>http://www.lxtreme.nl/</url>
-			<timezone>+1</timezone>
+    <developer>
+			<id>fbarriga</id>
+			<name>Felipe Barriga Richards</name>
+			<email>felipe@felipebarriga.cl</email>
 		</developer>
 	</developers>
 	<licenses>
@@ -32,15 +25,16 @@
 		<ols.version>0.9.8-SNAPSHOT</ols.version>
 	</properties>
 	<prerequisites>
-		<maven>3.0.5</maven>
+		<maven>3.13.0</maven>
 	</prerequisites>
 	<modules>
 		<module>lib.mydoggy</module>
+		<module>lib.jserialcomm</module>
+		<module>lib.jvt220</module>
 		<module>api</module>
 		<module>util</module>
 		<module>test.util</module>
 		<module>logging</module>
-		<module>rxtx</module>
 		<module>service.config</module>
 		<module>service.io</module>
 		<module>service.acquisition</module>
@@ -131,11 +125,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<inherited>true</inherited>
+				<version>3.13.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -143,20 +136,20 @@
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.8</version>
 				<inherited>true</inherited>
-				<!-- use Ant 1.8.2 *explicitly* to ensure we've got the version that 
+				<!-- use Ant 1.8.2 *explicitly* to ensure we've got the version that
 					supports 'cutdirsmapper' -->
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.ant</groupId>
 						<artifactId>ant</artifactId>
-						<version>1.10.11</version>
+						<version>1.8.2</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>5.1.9</version>
 				<inherited>true</inherited>
 			</plugin>
 			<plugin>
@@ -178,6 +171,10 @@
 				<inherited>true</inherited>
 				<configuration>
 					<forkMode>once</forkMode>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.desktop/java.awt=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -194,7 +191,7 @@
         <profile>
             <id>jdk8-javadoc</id>
             <activation>
-                <jdk>[1.8,)</jdk>
+                <jdk>[17,)</jdk>
             </activation>
             <build>
                 <plugins>
@@ -205,8 +202,21 @@
                         <configuration>
                             <quiet/>
                             <doclint>none</doclint>
-                            <source>8</source>
+                            <source>17</source>
+                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                         </configuration>
+						<executions>
+							<execution>
+								<id>main-javadoc</id>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<configuration>
+									<release>17</release>
+								</configuration>
+							</execution>
+						</executions>
                     </plugin>
                 </plugins>
             </build>
@@ -255,6 +265,16 @@
 			</dependency>
 			<dependency>
 				<groupId>nl.lxtreme.ols</groupId>
+				<artifactId>lib.jserialcomm</artifactId>
+				<version>2.10.4</version>
+			</dependency>
+			<dependency>
+				<groupId>nl.lxtreme.ols</groupId>
+				<artifactId>lib.jvt220</artifactId>
+				<version>1.3.3</version>
+			</dependency>
+			<dependency>
+				<groupId>nl.lxtreme.ols</groupId>
 				<artifactId>client</artifactId>
 				<version>1.2.0</version>
 			</dependency>
@@ -297,11 +317,6 @@
 				<groupId>nl.lxtreme.ols</groupId>
 				<artifactId>test.util</artifactId>
 				<version>1.1.0</version>
-			</dependency>
-			<dependency>
-				<groupId>nl.lxtreme.ols</groupId>
-				<artifactId>org.rxtx</artifactId>
-				<version>2.2.0-10</version>
 			</dependency>
 			<dependency>
 				<groupId>nl.lxtreme.ols.device</groupId>
@@ -392,18 +407,19 @@
 			<dependency>
 				<groupId>org.osgi</groupId>
 				<artifactId>osgi.core</artifactId>
-				<version>6.0.0</version>
+				<version>7.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.osgi</groupId>
 				<artifactId>osgi.cmpn</artifactId>
 				<version>6.0.0</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.main</artifactId>
-				<version>5.6.10</version>
+				<version>7.0.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
@@ -413,27 +429,27 @@
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.log</artifactId>
-				<version>1.0.1</version>
+				<version>1.3.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.metatype</artifactId>
-				<version>1.1.6</version>
+				<version>1.2.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.fileinstall</artifactId>
-				<version>3.6.4</version>
+				<version>3.7.4</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.configadmin</artifactId>
-				<version>1.8.16</version>
+				<version>1.9.26</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>org.apache.felix.dependencymanager</artifactId>
-				<version>4.4.1</version>
+				<version>4.6.1</version>
 			</dependency>
 
 			<dependency>
@@ -450,7 +466,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.13.1</version>
+				<version>4.13.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
@@ -478,7 +494,11 @@
 				<artifactId>TableLayout</artifactId>
 				<version>20050920</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
